<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit_name"
        android:layout_alignBottom="@+id/edit_name"
        android:layout_alignParentLeft="true"
        android:textColor="@color/blue"
        android:text="@string/name" />

    <TextView
        android:id="@+id/user_name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edit_name"
        android:layout_marginTop="28dp"
        android:textColor="@color/blue"
        android:text="@string/user_name" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/editText1"
        android:textStyle="italic"
        android:text="@string/enter_email"
        android:ems="10" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="38dp"
        android:textColor="@color/blue"
        android:text="@string/password" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/editText2"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/enter_password" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/enter_name"
        android:textStyle="italic" />

    <Button
        android:id="@+id/Button03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:textColor="@color/blue"
       
        android:text="@string/update" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/user_name_view"
        android:layout_alignBottom="@+id/user_name_view"
        android:layout_toRightOf="@+id/user_name_view"
        android:ems="10"
        android:text="@string/enter_user_name"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/view_name"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="39dp"
        android:text="@string/email"
        android:textColor="@color/blue" />
    
</RelativeLayout>

