<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    
        <Button
            android:id="@+id/continue_button"
            style="@style/ButtonText"
            android:background="@drawable/button_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgot_password_email"
            android:layout_marginRight="38dp"
            android:layout_marginTop="98dp"
            android:ems="6"
            android:layout_toLeftOf="@+id/cancel_button"
            android:text="@string/cont"
            android:textColor="@color/white"
            android:textStyle="bold" />
        <Button
            android:id="@+id/cancel_button"
            style="@style/ButtonText"
            android:background="@drawable/button_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/continue_button"
            android:layout_alignBottom="@+id/continue_button"
            android:layout_alignParentRight="true"
            android:layout_marginRight="28dp"
            android:ems="6"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/forgot_password_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/userLabel"
            android:layout_marginTop="21dp"
            android:ems="10"
            android:hint="@string/example_email"
            android:inputType="text" />
        <TextView
            android:id="@+id/userLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="85dp"
            android:ems="10"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>