<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.59"
        android:background="@drawable/alice" 
        android:id="@+id/main_container">"

        

        <TextView
            android:id="@+id/welcome_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="16dp"
            android:layout_marginTop="93dp"
            android:text="@string/welcome"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/dark_green"
            android:textStyle="bold" />

        <Button
            android:id="@+id/loginButton"
            style="@style/ButtonText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/registerButton"
            android:layout_alignBottom="@+id/registerButton"
            android:layout_marginLeft="18dp"
            android:layout_toRightOf="@+id/registerButton"
            android:background="@drawable/button_green"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/registerButton"
            style="@style/ButtonText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/welcome_label"
            android:layout_below="@+id/welcome_label"
            android:layout_marginTop="67dp"
            android:background="@drawable/button_green"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>